Add script for loading data to auctiondatamanager image

--- a/dockerImages/auctiondatamanager/Dockerfile
+++ b/dockerImages/auctiondatamanager/Dockerfile
@@ -5,7 +5,12 @@ COPY entrypoint.sh /entrypoint.sh
 COPY dbLoader.jar /dbLoader.jar
 COPY dbLoaderLibs /dbLoaderLibs
 COPY isDataLoaded.pl /isDataLoaded.pl
+COPY loadData.pl /loadData.pl
+COPY prepareData.pl /prepareData.pl
+COPY pretouchData.pl /pretouchData.pl
+COPY cleanData.pl /cleanData.pl
 COPY images /images
+COPY items.json /items.json
 	
 RUN yum install -y java-1.8.0-openjdk && \
 	yum install -y java-1.8.0-openjdk-devel && \
