Moving configuration of MongoDB sharding/replica into MongoDB services

--- a/dockerImages/mongodb/mongoc3.conf
+++ b/dockerImages/mongodb/mongoc3.conf
@@ -10,4 +10,7 @@ storage:
     dbPath: "/mnt/mongoC3data"
 
 sharding:
-    clusterRole: configsvr
+    clusterRole: configsvr    
+
+replication:
+  replSetName: auctionW1I1
