--- a/configFiles/mongodb/mongoc3.conf
+++ b/configFiles/mongodb/mongoc3.conf
@@ -16,4 +16,7 @@ storage:
     dbPath: "/mnt/mongoC3data"
 
 sharding:
-    clusterRole: configsvr
+    clusterRole: configsvr    
+
+replication:
+  replSetName: auctionW1I1
