--- a/dockerImages/auctiondatamanager/Dockerfile
+++ b/dockerImages/auctiondatamanager/Dockerfile
@@ -1,6 +1,7 @@
 FROM namespace/weathervane-centos7:version
 MAINTAINER hrosenbe@vmware.com
 
+COPY mongodb.repo /etc/yum.repos.d/mongo.repo
 COPY entrypoint.sh /entrypoint.sh
 COPY dbLoader.jar /dbLoader.jar
 COPY dbLoaderLibs /dbLoaderLibs
@@ -14,6 +15,7 @@ COPY items.json /items.json
 	
 RUN yum install -y java-1.8.0-openjdk && \
 	yum install -y java-1.8.0-openjdk-devel && \
+    yum -y clean all && \
     chmod +x /entrypoint.sh
 
 ENV JVMOPTS="-Xmx500m -Xms500m -XX:+AlwaysPreTouch" LOADDATA=1 PREPDATA=0 MAXUSERS=1000 USERS=1000 MAXDURATION=7200 USERSPERAUCTIONSCALEFACTOR="15.0"
