--- a/dockerImages/mongodb/mongod-replica.conf
+++ b/dockerImages/mongodb/mongod-replica.conf
@@ -17,5 +17,5 @@ operationProfiling.slowOpThresholdMs: 10
 storage:
   engine: "wiredTiger"
  
- replication:
-  replSetName: auctionW1I1
+replication:
+  replSetName: "auctionW1I1"
