--- a/configFiles/mongodb/mongod-replica.conf
+++ b/configFiles/mongodb/mongod-replica.conf
@@ -24,5 +24,5 @@ operationProfiling.slowOpThresholdMs: 10
 storage:
   engine: "wiredTiger"
 
- replication:
-  replSetName: auctionW1I1
+replication:
+  replSetName: "auctionW1I1"
