--- a/configFiles/kubernetes/configurationmanager/configurationManager.yaml
+++ b/configFiles/kubernetes/configurationmanager/configurationManager.yaml
@@ -1,3 +1,13 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: cm-config
+data: 
+  JVMOPTS: "-Xmx500m -Xms500m -XX:+AlwaysPreTouch"
+  WORKLOADNUM: "1"
+  APPINSTANCENUM: "1"
+  PORT: "8888"
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -23,3 +33,17 @@ spec:
         - containerPort: 8888
           name: cmport
           protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cm
+spec:
+  type: NodePort
+  ports:
+  - port: 8888
+    name: cmport
+  selector:
+    app: auction
+    tier: cm
+    impl: WebConfig
