--- a/configFiles/kubernetes/postgresql/postgresql.yaml
+++ b/configFiles/kubernetes/postgresql/postgresql.yaml
@@ -1,3 +1,19 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgresql-config
+data: 
+  POSTGRES_USER: "auction"
+  POSTGRES_PASSWORD: "auction"
+  POSTGRESPORT: "5432"
+  POSTGRESTOTALMEM: "16"
+  POSTGRESTOTALMEMUNIT: "G"
+  POSTGRESSHAREDBUFFERS: "0"
+  POSTGRESSHAREDBUFFERSPCT: "0.25"
+  POSTGRESEFFECTIVECACHESIZE: "0"
+  POSTGRESEFFECTIVECACHESIZEPCT: "0.65"
+  POSTGRESMAXCONNECTIONS: "0"
+---
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
@@ -48,3 +64,17 @@ spec:
       accessModes:
       - ReadWriteOnce
       storageClassName: fast
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgresql
+spec:
+  clusterIP: None
+  ports:
+  - port: 5432
+    name: postgresqlport
+  selector:
+    app: auction
+    tier: db
+    impl: postgresql
