--- a/configFiles/kubernetes/zookeeper/zookeeper.yaml
+++ b/configFiles/kubernetes/zookeeper/zookeeper.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: zookeeper-config
+data: 
+  ZK_CLIENT_PORT: "2181"
+  ZK_PEER_PORT: "2888"
+  ZK_ELECTION_PORT: "3888"
+  ZK_SERVERS: "server.1=zookeeper-0:2888:3888"
+  ZK_ID: "1"
+---
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
@@ -30,3 +41,21 @@ spec:
         - containerPort: 3888
           name: electionport
           protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper
+spec:
+  clusterIP: None
+  ports:
+  - port: 2181
+    name: clientport
+  - port: 2888
+    name: peerport
+  - port: 3888
+    name: electionport
+  selector:
+    app: auction
+    tier: cs
+    impl: zookeeper
