Use a single kubernetes yaml file per service

--- a/configFiles/kubernetes/mongodb/mongod.yaml
+++ b/configFiles/kubernetes/mongodb/mongod.yaml
@@ -5,6 +5,7 @@ metadata:
 data: 
   CLEARBEFORESTART: "0"
   MONGODPORT: "27017"
+  MONGOCPORT: "27019"
   NUMSHARDS: "1"
   NUMREPLICAS: "0"
   ISCFGSVR: "0"
