--- a/dockerImages/auctiondatamanager/Dockerfile
+++ b/dockerImages/auctiondatamanager/Dockerfile
@@ -15,6 +15,9 @@ COPY items.json /items.json
 	
 RUN yum install -y java-1.8.0-openjdk && \
 	yum install -y java-1.8.0-openjdk-devel && \
+	yum install -y mongodb-org-shell && \
+	yum localinstall -y http://yum.postgresql.org/9.3/redhat/rhel-7-x86_64/pgdg-centos93-9.3-3.noarch.rpm && \
+	yum install -y postgresql93 && \
     yum -y clean all && \
     chmod +x /entrypoint.sh
 
