--- a/configFiles/kubernetes/auctionDataManager.yaml
+++ b/configFiles/kubernetes/auctionDataManager.yaml
@@ -35,7 +35,7 @@ spec:
       containers:
       - image: hrosenbe/weathervane-auctiondatamanager:1.1.0
         name: cm
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         envFrom:
         - configMapRef:
             name: auctiondatamanager-config
