--- a/configFiles/kubernetes/configurationManager.yaml
+++ b/configFiles/kubernetes/configurationManager.yaml
@@ -25,7 +25,7 @@ spec:
       containers:
       - image: hrosenbe/weathervane-cm:1.1.0
         name: cm
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         envFrom:
         - configMapRef:
             name: cm-config
