--- a/configFiles/kubernetes/rabbitmq.yaml
+++ b/configFiles/kubernetes/rabbitmq.yaml
@@ -23,7 +23,7 @@ spec:
       containers:
       - image: hrosenbe/weathervane-rabbitmq:1.1.0
         name: rabbitmq
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         envFrom:
         - configMapRef:
             name: rabbitmq-config
