--- a/configFiles/kubernetes/nginx.yaml
+++ b/configFiles/kubernetes/nginx.yaml
@@ -3,13 +3,13 @@ kind: ConfigMap
 metadata:
   name: nginx-config
 data: 
-  WORKERCONNECTIONS : 100
-  PERSERVERCONNECTIONS: 25000
-  KEEPALIVETIMEOUT: 120
-  MAXKEEPALIVEREQUESTS: 1000
+  WORKERCONNECTIONS : "100"
+  PERSERVERCONNECTIONS: "25000"
+  KEEPALIVETIMEOUT: "120"
+  MAXKEEPALIVEREQUESTS: "1000"
   IMAGESTORETYPE: "mongodb"
-  HTTPPORT: 80
-  HTTPSPORT: 443
+  HTTPPORT: "80"
+  HTTPSPORT: "443"
   APPSERVERS: "tomcat:8080"
 ---
 apiVersion: extensions/v1beta1
