--- a/configFiles/kubernetes/zookeeper.yaml
+++ b/configFiles/kubernetes/zookeeper.yaml
@@ -3,11 +3,11 @@ kind: ConfigMap
 metadata:
   name: zookeeper-config
 data: 
-  ZK_CLIENT_PORT: 2181
-  ZK_PEER_PORT: 2888
-  ZK_ELECTION_PORT: 3888
+  ZK_CLIENT_PORT: "2181"
+  ZK_PEER_PORT: "2888"
+  ZK_ELECTION_PORT: "3888"
   ZK_SERVERS: "server.1=zookeeper-0:2888:3888,server.2=zookeeper-1:2888:3888,server.3=zookeeper-2:2888:3888"
-  ZK_ID: 0
+  ZK_ID: "0"
 ---
 apiVersion: apps/v1beta1
 kind: StatefulSet
