Initial version of kubernetes services

--- a/configFiles/kubernetes/auctionDataManager.yaml
+++ b/configFiles/kubernetes/auctionDataManager.yaml
@@ -30,7 +30,7 @@ spec:
       labels:
         app: auction
         tier: dm
-        impl: auctiondm
+        impl: auctiondatamanager
     spec:
       containers:
       - image: hrosenbe/weathervane-auctiondatamanager:1.1.0
