--- a/configFiles/kubernetes/postgresql.yaml
+++ b/configFiles/kubernetes/postgresql.yaml
@@ -26,7 +26,8 @@ spec:
       name: postgresql
       labels:
         app: auction
-        tier: db
+        tier: data
+        type: dbServer
         impl: postgresql
     spec:
       containers:
@@ -76,5 +77,6 @@ spec:
     name: postgresqlport
   selector:
     app: auction
-    tier: db
+    tier: data
+    type: dbServer
     impl: postgresql
