--- a/configFiles/kubernetes/tomcat.yaml
+++ b/configFiles/kubernetes/tomcat.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: tomcat-config
 data: 
-  TOMCAT_USE_TLS: false
+  TOMCAT_USE_TLS: "0"
   TOMCAT_JVMOPTS: "-Xmx6G -Xms6G -XX:+AlwaysPreTouch -XX:+PreserveFramePointer  -Dspring.profiles.active=postgresql,ehcache,imagesInMongo,singleMongo,singleRabbit  -DAUTHTOKENCACHESIZE=2000 -DACTIVEAUCTIONCACHESIZE=134  -DAUCTIONREPRESENTATIONCACHESIZE=134  -DIMAGEINFOCACHESIZE=6700 -DITEMSFORAUCTIONCACHESIZE=134  -DITEMCACHESIZE=1340  -DAUTHTOKENCACHEMODE=REPLICATED -DZOOKEEPERCONNECTIONSTRING=zookeeper:2181  -DITEMTHUMBNAILIMAGECACHESIZE=67  -DITEMPREVIEWIMAGECACHESIZE=1  -DITEMFULLIMAGECACHESIZE=1  -DRANDOMIZEIMAGES=true  -DHIGHBIDQUEUECONCURRENCY=2  -DNEWBIDQUEUECONCURRENCY=2  -DIMAGEWRITERTHREADS=1  -DUSEIMAGEWRITERTHREADS=true  -DNUMCLIENTUPDATETHREADS=2  -DNUMAUCTIONEERTHREADS=2  -DRABBITMQ_HOST=rabbitmq -DRABBITMQ_PORT=5672  -DMONGODB_HOST=mongodb -DMONGODB_PORT=27017  -DDBHOSTNAME=postgresql -DDBPORT=5432  -XX:CompileThreshold=2000  -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/opt/apache-tomcat-auction1/logs/gc.log  -DnodeNumber=1 "
   TOMCAT_SHUTDOWN_PORT: "8005"
   TOMCAT_CONNECTIONS: "5000"
