--- a/configFiles/kubernetes/ingressControllerNginxService.yaml
+++ b/configFiles/kubernetes/ingressControllerNginxService.yaml
@@ -2,20 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ingress-controller-nginx
-  labels:
-    app: ingress-controller-nginx
 spec:
-  externalTrafficPolicy: Local
-  type: LoadBalancer
-  loadBalancerIP: 192.168.2.50
+  type: NodePort
   ports:
-  - port: 80
-    name: http
+  - name: http
+    port: 80
     targetPort: 80
-  - port: 443
-    name: https
+    protocol: TCP
+  - name: https
+    port: 443
     targetPort: 443
+    protocol: TCP
   selector:
     app: ingress-controller-nginx
-
     
