--- a/configFiles/kubernetes/auctionIngress.yaml
+++ b/configFiles/kubernetes/auctionIngress.yaml
@@ -10,6 +10,7 @@ spec:
   rules:
   - http:
       paths:
-      - backend:
+      - path: /
+        backend:
           serviceName: nginx
           servicePort: 80
