--- a/configFiles/kubernetes/auctionIngress.yaml
+++ b/configFiles/kubernetes/auctionIngress.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress-nginx
+  labels:
+    type: appInstance
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
