--- a/configFiles/kubernetes/ingressControllerNginxService.yaml
+++ b/configFiles/kubernetes/ingressControllerNginxService.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ingress-controller-nginx
+  labels:
+    type: appInstance
 spec:
   type: NodePort
   ports:
