--- a/configFiles/kubernetes/mongodb.yaml
+++ b/configFiles/kubernetes/mongodb.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongodb-config
+  labels:
+    app: auction
+    tier: data
+    type: nosqlServer
+    impl: mongodb
 data: 
   CLEARBEFORESTART: "0"
   MONGODPORT: "27017"
