--- a/configFiles/kubernetes/postgresql.yaml
+++ b/configFiles/kubernetes/postgresql.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgresql-config
+  labels:
+    app: auction
+    tier: data
+    type: dbServer
+    impl: postgresql
 data: 
   POSTGRES_USER: "auction"
   POSTGRES_PASSWORD: "auction"
