--- a/configFiles/kubernetes/rabbitmq.yaml
+++ b/configFiles/kubernetes/rabbitmq.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: rabbitmq-config
+  labels:
+    app: auction
+    tier: backend
+    type: msgServer
+    impl: rabbitmq
 data: 
   RABBITMQ_NODE_PORT: "5672"
   RABBITMQ_DIST_PORT: "25672"
