--- a/configFiles/kubernetes/zookeeper.yaml
+++ b/configFiles/kubernetes/zookeeper.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: zookeeper-config
+  labels:
+    app: auction
+    tier: backend
+    type: coordinationServer
+    impl: zookeeper
 data: 
   ZK_CLIENT_PORT: "2181"
   ZK_PEER_PORT: "2888"
